[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TutorialScreen/TutorialScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Original/Sprites/sheep_compiled.png" type="Texture" id=2]
[ext_resource path="res://Scenes/TutorialScreen/Tutorials/Level1TutorialSheepPoisoned.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 448, 96, 32 )

[node name="IntroSheepPoisoned" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="NinePatchRect" parent="Control" index="0"]
margin_left = -152.0
margin_top = 114.0
margin_right = 153.0
margin_bottom = 270.0

[node name="PanelContainer" parent="Control/NinePatchRect/MarginContainer" index="0"]
margin_bottom = 148.0

[node name="TutorialText" parent="Control/NinePatchRect/MarginContainer/PanelContainer" index="0"]
margin_bottom = 92.0
text = "Uh oh! The robot sheep %s just ate some volatile grass.


This wont end well..."

[node name="TextureRect" type="TextureRect" parent="Control/NinePatchRect/MarginContainer/PanelContainer/TutorialText" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -7.0
margin_right = 48.0
margin_bottom = 25.0
texture = SubResource( 1 )
expand = true

[node name="ResumeButton" parent="Control/NinePatchRect/MarginContainer/PanelContainer" index="1"]
margin_top = 100.0
margin_bottom = 140.0
